--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -48,6 +48,7 @@
 
 \usepackage{threeparttable} %benötigt um Fussnoten in einer Tabelle zu machen
 \usepackage{longtable}
+\usepackage{subfigure}
 
 
 \usepackage{spreadtab} %benötigt um in Tabellen zu rechnen
