--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -7,7 +7,7 @@ eine konstante Wurfweite entsteht. Die beste Art, beides zusammen zu realisieren
 Das Förderband wird zwischen den zwei Acrylglasplatten aufgespannt. Der Antrieb des Förderbandes
 erfolgt mit einem DC-Motor. Dieser wird mit einem Verhältnis von $i=5:1$ untersetzt, um das benötigte
 Drehmoment an die Antriebstrommel zu übertragen. Die Berechnungen dazu sind im Anhang in Formel
-\ref{equ:DrehmomentFörderband} ff. ersichtlich. Auf dem Förderband, welches aus einem
+\ref{equ:M_Antrieb} ff. ersichtlich. Auf dem Förderband, welches aus einem
 Flachbandriemen besteht, sind konvexe Führungsschaufeln angebracht. Diese sind so ausgerundet, damit
 der Ball möglichst lange geführt werden kann und die Führungsschaufeln nicht in Berührung der
 Schwungräder kommen. Die Schaufeln werden voraussichtlich mit dem Förderband verschweisst.
@@ -16,11 +16,11 @@ Schwungräder kommen. Die Schaufeln werden voraussichtlich mit dem Förderband v
 	\includegraphics[width=1.1\textwidth,clip,trim=0mm 0mm 0mm 0mm]
 	{Enddokumentation/Loesungskonzept/Bilder/Foerderband.jpg}
 	\caption{Grafik Förderband}
-	\label{fig:Grafik Förderband}	
+	\label{fig:GrafikFörderband}	
 \end{figure}\\\\
 Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder
 zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen
 Schwungrades gefördert und anschliessend in einem 45$^\circ$ Winkel nach oben zugeführt werden. Dazu dient
 ein Führungselement. Die Gestaltung dafür wird sich durch Tests zeigen. Als Ideen stehen zwei
 Stangen oder ein Blech, welches die Bälle zu den Schwungrädern führt zur Auswahl. Die Abbildung
-\ref{fig:Grafik Förderband} zeigt ein mögliche Ausführung der Schaufeln am Band.
+\ref{fig:GrafikFörderband} zeigt ein mögliche Ausführung der Schaufeln am Band.
