--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -16,16 +16,14 @@
 	\rule{0pt}{11pt}\textit{Ort}:             & Teaminseln, Trakt 3 HSLU \\
 	\rule{0pt}{11pt}\textit{Tester}:          & Thomas, Pascal, Livio, Matteo, Niklaus\\
 	\rule{0pt}{11pt}\textit{Ziel des Testes}: & Es soll festgestellt werden, ob der entwickelte 
-	Algorithmus zur Korberkennung bei Verwendung von starken Scheinwerfern funktioniert. Besonderes Augenmerk liegt auf dem Schattenwurf auf der Rückwand und die Belichtung der Korbes selbst. \\
+	Algorithmus zur Korberkennung bei Verwendung von starken Scheinwerfern funktioniert. Besonderes Augenmerk liegt auf dem Schattenwurf auf der Rückwand und die Belichtung des Korbes selbst. \\
 	\rule{0pt}{11pt}\textit{Aufbau / Ablauf}: & Das Modellspielfeld wurde mit zwei ??? Watt 
 	Scheinwerfern ausgeleuchtet und anschliessend mit mehreren Smartphones (LG Nexus, HTC One 
-	und Nokia Lumia) abfotografiert. Die Resultate wurden dem Korberkennungsalgorithmus übergeben. 
-	Während dem die untenstehenden Bilder aufgenommen wurden, blieben die Einstellungen der 
-	Scheinwerfer gleich.\\
+	und Nokia Lumia) abfotografiert. Die Resultate wurden dem entwickelten Prototypen zur Auswertung übergeben. 
+	\\
 	\rule{0pt}{11pt}\textit{Fazit / Verbesserungs-\newline vorschlag}: & Der Algorithmus konnte 
-	aus allen Bildern die korrekte Korbposition ermitteln. Eine Auswahl der aufgenommenen Bilder 
-	sind in den Abbildungen~\ref{fig:KorbFoto1} und~\ref{fig:KorbFoto2} aufgeführt. Dabei ist gut 
-	zu erkennen, wie der Schatten geworfen wird.\\
+	aus allen Bildern die korrekte Korbposition ermitteln. Ein paar Ausschnitte aus den Aufnahmen 
+	sind in den Abbildungen~\ref{fig:KorbFoto1} und~\ref{fig:KorbFoto2} aufgeführt. \\
 \end{tabular}
 %
 \vspace{0.2cm}
@@ -41,7 +39,7 @@
 
 In der Abbildung~\ref{fig:KorbFoto1} ist gut zu erkennen, wie der Schatten des Korbes auf die 
 Rückwand geworfen wird. Da der Korb am rechten Rand steht, ist nur der Schatten auf der linken 
-von belang. Auch gut ersichtlich ist, dass der Kontrast gross ist.
+von belang. Auch gut ersichtlich ist, dass der Kontrast dennoch ausreicht, um die Kontur des Korbes zu definieren.
 \newpage
 %
 \begin{figure}[h!]
@@ -52,7 +50,7 @@ von belang. Auch gut ersichtlich ist, dass der Kontrast gross ist.
 \caption{Fotos des Korbes, der in der Mitte steht}
 \label{fig:KorbFoto2}
 \end{figure}
-In der Abbildung~\ref{fig:KorbFoto2} ist zu erkennen, wie der Schatten des Korbes auf beiden Seiten der Rückwand geworfen werden. Ebenfalls ist ersichtlich, dass der Schattenwurf nicht so ausgeprägt ist wie in der Abbildung~\ref{fig:KorbFoto1}.
+In der Abbildung~\ref{fig:KorbFoto2} ist zu erkennen, wie die Schatten des Korbes auf beiden Seiten der Rückwand geworfen werden, deren Ausprägung jedoch deutlich geringer wie in Abbildung~\ref{fig:KorbFoto1} ist.
 
 
 
