Minus ein n (akkusativ ftw :))

--- a/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
+++ b/Dokumentation/Enddokumentation/Tests/Beleuchtungstest.tex
@@ -50,7 +50,7 @@ von belang. Auch gut ersichtlich ist, dass der Kontrast dennoch ausreicht, um di
 \caption{Fotos des Korbes, der in der Mitte steht}
 \label{fig:KorbFoto2}
 \end{figure}
-In der Abbildung~\ref{fig:KorbFoto2} ist zu erkennen, wie die Schatten des Korbes auf beiden Seiten der Rückwand geworfen werden, deren Ausprägung jedoch deutlich geringer wie in Abbildung~\ref{fig:KorbFoto1} ist.
+In der Abbildung~\ref{fig:KorbFoto2} ist zu erkennen, wie die Schatten des Korbes auf beide Seiten der Rückwand geworfen werden, deren Ausprägung jedoch deutlich geringer wie in Abbildung~\ref{fig:KorbFoto1} ist.
 
 
 
