Neue Darstellung erstellt

--- a/Dokumentation/Common/Titelblatt.tex
+++ b/Dokumentation/Common/Titelblatt.tex
@@ -1,8 +1,8 @@
 \begin{titlepage}
-    \parindent0pt {\Huge PREN 1, TEAM 32}\\
-    \vspace*{0.7cm}
-    \newline
-    \begin{tabular}{ p{6cm} p{5cm}}
+    \begin{center}
+        {\Huge PREN 1, TEAM 32\par}
+        \vspace{3em}
+        \begin{tabular}{ll}
         Yves Studer                & Thomas Wiss \\
         Dorfstrasse 28             & Bachhüsliweg 4a \\
         6264 Pfaffnau              & 6042 Dietwil \\
@@ -26,16 +26,15 @@
         6275 Ballwil		       & \\
         +41 79 717 68 94	       & \\
         pascal.roth@stud.hslu.ch   & \\
-    \end{tabular}
-    \vspace*{1.7cm}
-    \newline
-    {\Huge \myTitel}\\
-    \vspace*{1.2cm}\\
-    {\normalsize Dozent: Markus Thalmann}\\
-    \vspace*{0.2cm}\\
-    {\normalsize Hochschule Luzern - Technik \& Architektur}\\
-    {\normalsize Interdisziplinäre Projektarbeit 2014}\\
-    \vspace*{2.3cm}
-    \newline
-    {\normalsize Horw, Hochschule Luzern - T\&A, \today}\\
+        \end{tabular}\\
+        \vspace{5em}
+        {\huge \myTitel\par}
+        \vspace{5em}
+        Dozent: Markus Thalmann\\
+        \vspace{2em}
+        Hochschule Luzern - Technik \& Architektur \\   
+        Interdisziplinäre Projektarbeit 2014
+        \vspace{13em}\\
+        Horw, Hochschule Luzern - T\&A, \today
+    \end{center}
 \end{titlepage}
