--- a/Dokumentation/Common/layout.sty
+++ b/Dokumentation/Common/layout.sty
@@ -39,9 +39,10 @@
 
 % Grafiken
     \usepackage{graphicx}       % Grafiken einbinden
+    \usepackage{subfigure}
     \usepackage{pdfpages}       % PDF Seiten einbinden
     \usepackage{caption}        % Bildunterschrift
-    \usepackage{subcaption}     % Bildunterschrift unter zusammen dargestellten Bildern
+%    \usepackage{subcaption}     % Bildunterschrift unter zusammen dargestellten Bildern
     \usepackage{tikz}           % TikZ - "TikZ ist kein Zeichenprogramm"
     \usepackage{wrapfig} 
     \usetikzlibrary{tikzmark}   % References for hooking tikz graphics to
@@ -175,9 +176,9 @@
         % TODO: Define all dimensions below!!!
          \addtolength{\textheight}{2.5cm}
          \addtolength{\voffset}{-1.5cm}
-         \addtolength{\textwidth}{5cm}
-         \addtolength{\evensidemargin}{-25mm}
-         \addtolength{\oddsidemargin}{-25mm}
+         \addtolength{\textwidth}{4cm}
+         \addtolength{\evensidemargin}{-20mm}
+         \addtolength{\oddsidemargin}{-20mm}
 
          \addtolength{\textheight}{\topmargin-\evensidemargin-\hoffset+\voffset}
          \setlength{\topmargin}{\evensidemargin+\hoffset-\voffset}
