--- a/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
+++ b/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
@@ -92,8 +92,8 @@ ergibt das Drehmoment $M$, welches sich sinusförmig verhält.
     	\end{equation}
     \end{minipage}
 \hfill
-    \begin{minipage}[hbt]{0.4\textwidth}
-        \includegraphics[scale=0.54,clip,trim=18mm 10mm 8mm 19mm]
+    \begin{minipage}[hbt]{0.45\textwidth}
+        \includegraphics[scale=0.7,clip,trim=18mm 10mm 8mm 19mm]
         {Enddokumentation/Anhang/Bilder/Kraeftediagramm.jpg}
         \centering
         \caption{Kräftediagramm}
@@ -118,7 +118,7 @@ Drehmoment sich abbremsten, kamen wichtige Erkenntnisse zum Vorschein. Der Motor
 reagiert relativ träge auf eine Laständerung. Deshalb steht das erforderliche Drehmoment 
 nicht zur Verfügungen. Ein hohes Drehmoment bringt somit nur einen Zeitgewinn beim 
 Beschleunigen der Räder auf ihre Nenndrehzahl mit sich.
-\newpage
+%\newpage
 %
 \paragraph{Energiebilanzierung Ballwurf}$~~$\vspace{2mm}\\
 Aus den vorhergehenden Erkenntnissen wurde erkannt, dass die gespeicherte Energie 
@@ -200,7 +200,7 @@ y_{(t)} &= y_0 + v_0 \cdot t \cdot \sin(\alpha_0) - \frac{1}{2} \cdot g \cdot t^
 	\label{fig:WurfparabelKraefte}
 \end{figure}
 
-\newpage
+%\newpage
 \textbf{Berechnungswerte}\\
 \begin{tabular}{ll}
 	\rule{0pt}{11pt} $v_0$ & $0 \frac{m}{s}$ \\
