--- a/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Foerderband.tex
@@ -13,11 +13,11 @@ der Ball möglichst lange geführt werden kann und die Führungsschaufeln nicht 
 Schwungräder kommen. Die Schaufeln werden voraussichtlich mit dem Förderband verschweisst.
 \begin{figure} [h!]
 	\centering
-	\includegraphics[width=1.1\textwidth,clip,trim=0mm 0mm 0mm 0mm]
+	\includegraphics[width=0.9\textwidth,clip,trim=0mm 0mm 0mm 0mm]
 	{Enddokumentation/Loesungskonzept/Bilder/Foerderband.jpg}
 	\caption{Grafik Förderband}
 	\label{fig:GrafikFörderband}	
-\end{figure}\\\\
+\end{figure}
 Aus Testversuchen der Ballzuführung wurde erkannt, dass für einen idealen Abwurf beide Räder
 zeitgleich den Ball einklemmen müssen. Somit müssen die Bälle zunächst unterhalb des oberen
 Schwungrades gefördert und anschliessend in einem 45$^\circ$ Winkel nach oben zugeführt werden. Dazu dient
