--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -12,8 +12,14 @@ anschliessend die Bälle den Schwungrädern zu, wo diese auf ihre
 Abwurfgeschwindigkeit beschleunigt werden. Die Bälle verlassen nacheinander 
 das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich 
 alle Bälle im Korb befinden (zeitbedingt), wird das akustische Endsignal 
-auf dem Smartphone ausgegeben.
-\newpage
+auf dem Smartphone ausgegeben.\\
+\\
+Die Grafik in Abbildung \ref{fig:FlowChart} stellt den 
+schematischen Ablauf der oben erwähnten Funktionen dar. Einige Teilschritte 
+des Ablaufes, wie zum Beispiel das Beschleunigen der Schwungräder, werden 
+je nach zeitlicher Dauer oder möglicher auftretenden Störungen (in Form von 
+Vibrationen) verschoben.
+%
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=1\textwidth,clip,trim=10mm 169mm 89mm 15mm]
@@ -21,8 +27,4 @@ auf dem Smartphone ausgegeben.
 	\caption{Ablaufdiagramm zur Funktionsbeschreibung}
 	\label{fig:FlowChart}
 \end{figure}
-\noindent Die Grafik in Abbildung \ref{fig:FlowChart} stellt den 
-schematischen Ablauf der oben erwähnten Funktionen dar. Einige Teilschritte 
-des Ablaufes, wie zum Beispiel das Beschleunigen der Schwungräder, werden 
-je nach zeitlicher Dauer oder möglicher auftretenden Störungen (in Form von 
-Vibrationen) verschoben.
+\clearpage
