--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -1,7 +1,7 @@
 \subsubsection{Schwungräder}
-\begin{wrapfigure}{r}{0.50\textwidth}
-	\centering
-	\includegraphics[width=0.5\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Schwungraeder.jpg}
+\begin{wrapfigure}{r}{0.49\textwidth}
+%	\centering
+	\includegraphics[width=0.49\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Schwungraeder.jpg}
 	\caption{Schwungräder}
 	\label{fig:Schwungräder}	
 \end{wrapfigure}
