--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -23,6 +23,7 @@
 	selben Ort wie das Smartphone bestehen. Die Kommunikation zwischen PC und 
 	dem Controller wäre wie beim Smartphone über USB realisiert.
 	%
+	\newpage
 	\paragraph{Korberkennung}$~~$\vspace{2mm}\\
 		Für die Bestimmung der Position des Korbes wurde ein Algorithmus 
 		eigens entwickelt und in Java implementiert. Auf die Verwendung eines 
