--- a/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Stelleinheit.tex
@@ -13,7 +13,7 @@ da nur der Reibungskoeffizient und die Normalkraft, welche vom Gewicht der Abwur
 Moment erzeugen. Der Reibungskoeffizient wird durch die Lagerung klein gehalten. Die Lagerung erfolgt
 im Drehzentrum durch eine Hülse und im Endbereich der Abwurfeinheit durch zwei Kugelrollen, welche mit
 einem seitlichen Abstand angebracht sind. Dadurch wird die Auflagefläche verbreitert und das allfällige Kippen der Abwurfeinheit verhindert. Die Ansteuerung der Schrittmotoren erfolgt über den selbst konstruierten Controller, der als schwarzen Box in Abbildung \ref{fig:GrafikDesAntriebes} dargestellt ist.
-\begin{figure}
+\begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.9\textwidth,clip,trim=0mm 0mm 0mm 0mm]
 	{Enddokumentation/Loesungskonzept/Bilder/Stelleinheit.jpg}
