--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -4,11 +4,13 @@
 	Beschaffungskosten in der Tabelle \ref{tab:Kostentabelle} aufgelistet. 
 	Standardisierte Rohmaterialen wie Rundteile, Profile, Widerstände und 
 	dergleichen, stehen an der Hochschule Luzern kostenlos zur Verfügung.
+	%
+%\begin{table}[h!]
+%	\centering
     \begin{longtable}{p{1.7cm}rllcc}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
     & \textbf{Total} \\
-    \hline     &       &                              &            &            \\
-    Zuführung: & 1     & Flachbandriemen 	          &  Fr. 50.00 &  Fr. 50.00 \\
+    \hline Zuführung: & 1     & Flachbandriemen 	          &  Fr. 50.00 &  Fr. 50.00 \\
                & 1     & Achse          	          &  Fr. -     &  Fr. -     \\
                & 1     & Welle                     	  &  Fr. -     &  Fr. -     \\
                & 1     & Zahnrad         	          &  Fr. 8.00  &  Fr. 8.00  \\
@@ -46,10 +48,10 @@
                & 1     & Gleitlager                   &  Fr. 5.00  &  Fr. 5.00  \\
                & 1     & Aufnahmeplatte               &  Fr. -     &  Fr. -     \\
                & 1     & Welle                        &  Fr. -     &  Fr. -     \\
-               &       &                              &            &            \\
                &       & \textbf{Total:} & \textbf{} & \textbf{ Fr. 424.68 }    \\
-               &       &                              &            &            \\
-               
        \caption{Budgettabelle}
        \label{tab:Kostentabelle}
     \end{longtable}
+%    \caption{Budgettabelle}
+%    \label{tab:Kostentabelle}
+%\end{table}
