--- a/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
+++ b/Dokumentation/Funktionstests/BallmaschineDrehzahl.tex
@@ -1,6 +1,6 @@
 \subsection{Ballmaschine (Eruieren der Nenndrehzahl)}
 
-\begin{tabular}{p{3.6cm}p{9.4cm}}
+\begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 06.11.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
