--- a/Dokumentation/Enddokumentation/Anhang/StepperAnhang.tex
+++ b/Dokumentation/Enddokumentation/Anhang/StepperAnhang.tex
@@ -1,4 +1,4 @@
-\includepdf[page=1 , offset=0cm 0cm,frame, width=\textwidth,picturecommand={\centering},pagecommand=\subsection{Stepper-Dokumentation}\label{Stepper_Dokumentation}{\thispagestyle{fancy}},]{Enddokumentation/Anhang/Extern/Stepper_StandaloneDoc.pdf}
+\includepdf[page=1 , offset=0cm -1.9cm,frame, width=0.94\textwidth,picturecommand={\centering},pagecommand=\subsection{Stepper-Dokumentation}\label{Stepper_Dokumentation}{\thispagestyle{fancy}},]{Enddokumentation/Anhang/Extern/Stepper_StandaloneDoc.pdf}
 
 %pagecommand=\section{Projektplan}
-\includepdf[page=2- , offset=0cm 0cm,frame, width=\textwidth,picturecommand={\centering},pagecommand={\thispagestyle{fancy}},]{Enddokumentation/Anhang/Extern/Stepper_StandaloneDoc.pdf}
+\includepdf[page=2- , offset=0cm -1.35cm,frame, width=\textwidth,picturecommand={\centering},pagecommand={\thispagestyle{fancy}},]{Enddokumentation/Anhang/Extern/Stepper_StandaloneDoc.pdf}
