--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -2,7 +2,7 @@
 	Dieser Test wurde in der PREN-ET-Gruppe durchgeführt. Dabei handelt es sich um 
 	einen komplexeren und grösserern Aufbau.\\
 
-\begin{tabular}{p{3.6cm}p{9.4cm}}
+\begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Brushless-Motor Ansteuerung \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 6.12.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
