--- a/Dokumentation/Funktionstests/Ballmaschine.tex
+++ b/Dokumentation/Funktionstests/Ballmaschine.tex
@@ -1,5 +1,5 @@
 \subsection{Ballmaschine}
-\begin{tabular}{p{3.6cm}p{9.4cm}}
+\begin{tabular}{p{3.6cm}p{\textwidth-3.6cm-0.7cm}}
 \rule{0pt}{11pt}\textit{Typ}              & Ballmaschine \\ 
 \rule{0pt}{11pt}\textit{Datum}:           & 18.10.2014   \\
 \rule{0pt}{11pt}\textit{Ort}:             & Labor HSLU \\
