--- a/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
+++ b/Dokumentation/Enddokumentation/Anhang/BerechnungenSchwungradantrieb.tex
@@ -11,7 +11,7 @@ Ball wie eine Feder verhält.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.8\textwidth]
-	{Enddokumentation/Anhang/Bilder/KompressionBaelle.png}
+	{Enddokumentation/Anhang/Bilder/KompressionBaelle.jpg}
 	\caption{Prinzip der $k$-Bestimmung}
 	\label{fig:BallKomp}
 \end{figure}
@@ -48,7 +48,7 @@ Dabei wirkt die Federkraft jeweils im Abwurfwinkel zu den Schwungrädern und
 ergibt das Drehmoment $M$, welches sich sinusförmig verhält. 
 %
 \begin{align}  
-    S_{max} &= \frac{d_B - d_s}{2}\\
+    s_{max} &= \frac{d_B - d_s}{2}\\
     L_a &= 2 \cdot R_s + d_s\\
     \alpha_{Grenz} &= \arccos\left(\frac{R_s - s_{max}}{R_s}\right)
 \end{align}
@@ -77,7 +77,7 @@ ergibt das Drehmoment $M$, welches sich sinusförmig verhält.
 \begin{figure}[h!]
     \begin{minipage}[hbt]{0.6\textwidth}
     	\begin{align}  
-    	    M &= R_S \cdot F_t \\
+    	    M_s &= R_S \cdot F_t \\
     	    F_t &= F_s \cdot \sin(\alpha) \\ 
     	    F_s &= 2\cdot k \cdot \Delta x \\
     	    \Delta x_{(\alpha)} &= s_{max} - s_{(\alpha)} \\
@@ -141,21 +141,22 @@ zu bilanzieren.
 \hfill
     \begin{minipage}[hbt]{0.4\textwidth}
     	\centering
-    	\includegraphics[width=1\textwidth]{Enddokumentation/Anhang/Bilder/AbwurfBild.png}
+    	\includegraphics[width=0.8\textwidth,clip,trim=0cm 0cm 2cm 0cm]
+    	{Enddokumentation/Anhang/Bilder/Abwurfgeschwindigkeit.jpg}
     	\caption{Abwurfgeschwindigkeit}
     	\label{fig:Abwurfgeschwindigkeit}
     \end{minipage}
 \end{figure}
 
 \begin{align}
- 	&\sum E_{pot} &+&& \sum E_{kin} &&+&& \sum E_{rot} &= 0 \\
- 	& m_{ball} \cdot \left(h_1 - h_0\right) &+&&\frac{1}{2} \cdot \left( v_1{^{2}} - 
+ 	&\sum E_{pot} &+&& \sum E_{kin} &&+&& \sum E_{rot} &= 0 \label{equ:Energiegleichung}\\
+ 	& m_{ball} \cdot g \cdot \left(h_1 - h_0\right) &+&&\frac{1}{2} \cdot m_{Ball} \cdot\left( v_1{^{2}} - 
  	v_0{^{2}} \right) &&+&&\frac{1}{2} \cdot J \left( \omega_1{^{2}} - \omega_0{^{2}} 
  	\right) &= 0
 \end{align}
 
 \begin{align}
-\Delta h &= h_1 - h_2 \\
+\Delta h &= h_1 - h_0 \\
 v_0 &= v_{Band} = 0 \\
 v_1 &= v_{u1} \cdot \cos(\alpha_{Grenz}) \\
 v_{u1} &= 4 \cdot \pi \cdot R_s \cdot n_1 \\
@@ -168,28 +169,28 @@ Diese wurde ohne Luftreibung berechnet, da diese für solch kurze Distanzen eine
 vernachlässigbar kleinen Einfluss nimmt.
 
 \begin{align}
-x_{(t)} &= v_0 \cdot \cos(\alpha_0) \\
-y_{(t)} &= y_0 + v_0 \cdot t \cdot \sin(\alpha_0) - \frac{1}{2} \cdot g \cdot t^2
+x_{(t)} &= v_1 \cdot \cos(\alpha_1) \\
+y_{(t)} &= y_1 + v_1 \cdot t \cdot \sin(\alpha_1) - \frac{1}{2} \cdot g \cdot t^2
 \end{align}
 
 \begin{figure}[h!]
 	\centering
     \begin{tikzpicture}[thick,scale=1.2, every node/.style={scale=1}]
         \draw[line width=1pt, decorate, decoration=brace](10, 0) -- (0, 0) (5,0)node 
-        [below=1mm]{$x_1$};
+        [below=1mm]{$x_2$};
         \draw[line width=1pt, decorate, decoration=brace](10, 1.97) -- (10, 0) 
-        (10,1) node [right=1mm]{$y_1$};
+        (10,1) node [right=1mm]{$y_2$};
         \draw[line width=1pt, ->](0, 0) -- (0, 2) node [left=1mm]{$y_{(t)}$};
         \draw[line width=1pt, decorate, decoration=brace](-0.5mm, 1mm) -- 
-        (-0.5mm, 1) (3.2mm,0.5) node [left=5mm]{$y_0$};
+        (-0.5mm, 1) (3.2mm,0.5) node [left=5mm]{$y_1$};
         \draw[line width=1pt, ->](0, 1mm) -- (2.5, 1mm)  node [above=1mm]{$x_{(t)}$};
-        \draw[line width=1pt,red, ->](0, 1) -- node[below]{$v_0 \cdot \cos(\alpha)$} 
+        \draw[line width=1pt,red, ->](0, 1) -- node[below]{$v_1 \cdot \cos(\alpha)$} 
         (2, 1);     
         \draw[line width=1pt,red, ->](2, 1) -- (2, 2.2); \node[red] at (2.9,1.55)
-        {$v_0 \cdot \sin(\alpha)$}; 
-        \draw[line width=1pt,red, ->](0, 1) -- node[above]{$v_0$} (2, 2.2);   
+        {$v_1 \cdot \sin(\alpha)$}; 
+        \draw[line width=1pt,red, ->](0, 1) -- node[above]{$v_1$} (2, 2.2);   
         \draw[line width=1pt,samples=50] plot [domain=0:10](\x,{-1/20*pow(\x-6,2)+2.8});
-        \node[red] at (0.8,1.2){$\alpha$};
+        \node[red] at (0.8,1.2){$\alpha_1$};
         \fill[yellow] (3.2,2.4) circle (0.25); 
         \fill[yellow] (5.5,2.8) circle (0.25); 
         \fill[yellow] (9.3,2.2) circle (0.25);
@@ -203,11 +204,10 @@ y_{(t)} &= y_0 + v_0 \cdot t \cdot \sin(\alpha_0) - \frac{1}{2} \cdot g \cdot t^
 \newpage
 \textbf{Berechnungswerte}\\
 \begin{tabular}{ll}
-	\rule{0pt}{11pt} $v_0$ & $0 \frac{m}{s}$ \\
-	\rule{0pt}{11pt} $\alpha_0$ & $45^\circ$ \\
-	\rule{0pt}{11pt} $y_0$ & $0.125 m$ \\
-	\rule{0pt}{11pt} $y_1$ & $0.0 m$ \\
-	\rule{0pt}{11pt} $x_1$ & $1.8 m$ \\
+	\rule{0pt}{11pt} $\alpha_1$ & $45^\circ$ \\
+	\rule{0pt}{11pt} $y_1$ & $0.125 m$ \\
+	\rule{0pt}{11pt} $y_2$ & $0.0 m$ \\
+	\rule{0pt}{11pt} $x_2$ & $1.8 m$ \\
 \end{tabular}\\
 \\
 \\
@@ -226,15 +226,14 @@ grafisch dargestellt
 	{Enddokumentation/Anhang/Bilder/Schiefer_Wurf.jpg}
 	\caption{Wurfparabel}
 	\label{fig:Wurfparabel}
-\end{figure}
+\end{figure}\\
 %\newpage
-Mithilfe der Abwurfgeschwindigkeit kann die Abwurfgeschwindigkeit durch die Formeln 
+Mithilfe der Abwurfgeschwindigkeit kann die Nenndrehzahl durch die Formel 
 \ref{equ:v_1} definiert werden.
 \begin{equation}  
-    v_1 = 4\pi \cdot R_s \cdot n_1 \cdot \cos(\alpha_{Grenz})
+    n_1 = \frac{v_1}{4\pi \cdot R_s \cdot \cos(\alpha_{Grenz})}
     \label{equ:v_1}
 \end{equation}
-
 \textbf{Berechnungswerte}\\
 \begin{tabular}{ll}
 	\rule{0pt}{11pt} $R_s$ & $0.04 m$ \\
@@ -248,7 +247,7 @@ Mithilfe der Abwurfgeschwindigkeit kann die Abwurfgeschwindigkeit durch die Form
 	\rule{0pt}{11pt} $n_1$ & $9.45 \frac{1}{s}$ \\
 \end{tabular}\\
 \\
-Mit den Formeln \ref{equ:} bis \ref{equ:} kann die Nenndrehzahl gerechnet werden.
+Mit den Formeln \ref{equ:Energiegleichung} bis \ref{equ:v_1} kann die Nenndrehzahl gerechnet werden.
 \begin{equation}
 	m_{Ball} \cdot g \cdot \Delta h + \frac{1}{2} \cdot m_{Ball} \cdot \left[4\pi 
 	\cdot R_s \cdot n_1 \cdot \cos(\alpha_{Grenz})\right]^2 + 2 \cdot J \cdot \pi^2 
@@ -271,14 +270,16 @@ Mit den Formeln \ref{equ:} bis \ref{equ:} kann die Nenndrehzahl gerechnet werden
 \begin{tabular}{ll}
 	\rule{0pt}{11pt} $n_0$ & $15.89 \frac{1}{s}$ \\
 \end{tabular}\\
-
+\begin{equation}
+	\frac{n_1}{n_0} = 0.4 \label{equ_Prozentwert}
+\end{equation}
 Bei dem zurzeit vorhandenen Trägheitsmoment (Vollwelle) wird die Drehzahl um 40\% 
-abgebremst. Die dabei verlorene Energie muss vom Motor wieder zugeführt werden. 
+abgebremst. Die dabei verlorene Energie muss vom Motor zugeführt werden. 
 Die Zeitdauer dafür berechnet sich wie folgt.
 \begin{align}
-	M &= \alpha \cdot J \\
-	n_0 &= n_1 + \alpha \cdot t \\
-	t &= \frac{n_0 - n_1}{\alpha} = \frac{J \cdot \left(n_0 - n_1\right)}{M}
+	M_{Motor} &= \omega \cdot J \\
+	n_0 &= n_1 + \omega \cdot t \\
+	t &= \frac{n_0 - n_1}{\omega} = \frac{J \cdot \left(n_0 - n_1\right)}{M_{Motor}}
 \end{align}
 
 \textbf{Berechnungswerte}\\
